--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -52,7 +52,7 @@ jobs:
           name: packed-mod
       
       - name: Download info.json
-        uses: actions/download-artifact@3.0.2
+        uses: actions/download-artifact@v3.0.2
         with:
           name: info-json
       
