--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,7 +23,6 @@ jobs:
         run: |
           MFNAME=$(jq '.name + "_" + .version + ".zip"' info.json)
           echo "MODFILENAME=$MFNAME" >> $GITHUB_ENV
-          echo "$MFNAME" > mod-file-name.txt
 
       - name: Pack a mod
         run: rfmp --no-clean --install-dir .
@@ -35,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v3.1.2
         with:
           name: packed-mod
-          path: ${{ env.MODFILENAME }}
+          path: ./${{ env.MODFILENAME }}
       
       - name: Upload mod name as an artifact
         uses: actions/upload-artifact@v3.1.2
