--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           repository: JohnTheCoolingFan/rfmp
           fileName: rfmp-linux
+          latest: true
       
       - name: Get full mod file name
         run: |
