Add announcement on discord

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -63,6 +63,9 @@ jobs:
         run: |
           MFNAME=$(jq -r '.name + "_" + .version + ".zip"' info.json)
           echo "MODFILENAME=$MFNAME" >> $GITHUB_ENV
+          
+      - name: Post announcement in Discord
+        run: curl -H 'Content-Type'':'' application/json' -d '{"username"'':''"'"$(jq -r .name info.json)"'", "content"'':''"'"$(jq -r '"\(.name) \(.version)"' info.json)" has released'"}' ${{ secrets.DISCORD_WEB_HOOK }}
       
       - name: Upload file to release
         uses: softprops/action-gh-release@v1
