Fix secret name

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -44,7 +44,7 @@ jobs:
           path: info.json
           
       - name: Post announcement in Discord
-        run: curl -H 'Content-Type'':'' application/json' -d "$(echo '{"username"'':''"'"$(jq -r .name info.json)"'", "content"'':''"'"$(jq -r '"\(.name) \(.version)"' info.json)" has released'"}' | jq)" ${{ secrets.DISCORD_WEB_HOOK }}
+        run: curl -H 'Content-Type'':'' application/json' -d "$(echo '{"username"'':''"'"$(jq -r .name info.json)"'", "content"'':''"'"$(jq -r '"\(.name) \(.version)"' info.json)" has released'"}' | jq)" ${{ secrets.DISCORD_NEW_WEBHOOK }}
         
   release-github:
     name: Release on github
